--- a/googlecourse/app/src/main/res/layout/list_item_movie.xml
+++ b/googlecourse/app/src/main/res/layout/list_item_movie.xml
@@ -8,7 +8,8 @@
     android:id="@+id/iv_movieIcon"
     android:layout_width="128dp"
     android:layout_height="128dp"
-    android:layout_alignParentLeft="true"/>
+    android:layout_alignParentLeft="true"
+    android:layout_marginRight="3dp"/>
     <TextView
         android:id="@+id/tv_movieName"
         android:layout_width="match_parent"
@@ -19,7 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_movieName"
-        android:layout_toRightOf="@id/iv_movieIcon" />
+        android:layout_toRightOf="@id/iv_movieIcon"
+        style="@style/TextAppearance.AppCompat.Medium"/>
     <TextView
         android:id="@+id/tv_movieGenre"
         android:layout_width="match_parent"
