--- a/googlecourse/app/src/main/res/layout/activity_movies.xml
+++ b/googlecourse/app/src/main/res/layout/activity_movies.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoviesActivity"
-    android:padding="5dp">
+    tools:context=".MoviesActivity">
 <android.support.v7.widget.RecyclerView
     android:id="@+id/rv_movies"
     android:layout_width="match_parent"
